Check whether the palette is valid before adding a color

BUG:423353