plugins/tools/basictools/kis_tool_colorpicker.h
@@ -27,8 +27,9 @@
 #include "ui_wdgcolorpicker.h"
 #include "kis_tool.h"
 #include <kis_icon.h>
-
 #include <KoColorSet.h>
+
+class KisResourceModel;
 
 namespace KisToolUtils {
 struct ColorPickerConfig;
@@ -94,7 +95,6 @@ public Q_SLOTS:
     void slotSetAddPalette(bool);
     void slotChangeRadius(int);
     void slotChangeBlend(int);
-    void slotAddPalette(KoResourceSP resource);
     void slotSetColorSource(int value);
 
 private:
@@ -106,16 +106,15 @@ private:
     QScopedPointer<KisToolUtils::ColorPickerConfig> m_config;
 
     ToolActivation m_toolActivationSource {ToolActivation::DefaultActivation};
-    bool m_isActivated;
+    bool m_isActivated {false};
 
     KoColor m_pickedColor;
 
     // Used to skip some tablet events and update color less often
     QTimer m_colorPickerDelayTimer;
 
-    ColorPickerOptionsWidget *m_optionsWidget;
-
-    QList<KoColorSetSP> m_palettes;
+    ColorPickerOptionsWidget *m_optionsWidget {0};
+    KisResourceModel *m_resourceModel {0};
 };
 
 class KisToolColorPickerFactory : public KoToolFactoryBase
